# pact-model

./: .gitignore  Makefile  README.md  TODO.org  _CoqProject  coq-pact-model.opam  default.nix  shell.nix  z3_tptp
.github/workflows/: coq-ci.yml
boogie/: coin-v5.bpl  coin-v5.dfy  coin-v5a.bpl  coin-v5b.bpl  coin-v5c.dfy  coin.dfy  sum.dfy  sym.dfy
defpact/: defpact.cabal  package.yaml
doc/: capabilities.md
extract/: Main.hs  Pact.hs  default.nix  fixcode.pl  package.yaml  pact-model.cabal
extract/Pact/: PactExt.v
extract/src/: Extract.v  Pact.hs  Prelude0.hs  State.hs
lisp/: capabilities.el  capabilities.lisp  capabilities.pact  using-let.pact
notes/: Kadena.v
old/: ANF.v  Capabilities.v  CapabilitiesOld.v  Constrained.v  Db.v  EnsemblesExt.v  Example.v  Impl.v  Lam.v  Norm.v  Pred.v  RWSP.v  Ren.v  Sample.v  Sem.v  SemOld.v  SemRen.v  SemSub.v  Sound.v  Step.v  StepFunc.v  Sub.v  SubSem.v  Syntax.v  SysF.v  Trace.v  Wouter.v
old/Effects/: Eff.v  Member.v  Union.v
pact/: capabilities.lisp
ref/: default.nix  package.yaml  pact-model.cabal
ref/src/: Capability1.hs  Capability2.hs  Capability3.hs  Capability4.hs
src/: AExp.v  ANF.v  Bltn.v  Boogie.v  Builtin.v  CEK.v  Cap.v  Capabilities.v  Cat.v  Ctxt.v  EnsemblesExt.v  Eval.v  Example.v  Exp.v  Group.v  Lam.v  Lang.v  Lib.v  Lit.v  Log.v  Ltac.v  Monoid.v  Multi.v  Norm.v  Pact.v  PactSem.v  Pat.v  Pred.v  RWSE.v  RWSP.v  Ren.v  STLC.v  Sem.v  SemBltn.v  SemExp.v  SemRen.v  SemSub.v  SemTy.v  Sep.v  Sound.v  (+9 more)
tests/: local.pact
tla/: Makefile  SynchronousL2.cfg  SynchronousL2.tla
(+24 files in other folders)
